FBXのメッシュの読み込みまでできた

--- a/NewEngine.vcxproj
+++ b/NewEngine.vcxproj
@@ -188,6 +188,8 @@
     <ClCompile Include="NewEngine\Object\2D\Sprite.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Camera.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Line.cpp" />
+    <ClCompile Include="NewEngine\Object\Other\FbxLoader.cpp" />
+    <ClCompile Include="NewEngine\Object\Other\FbxModel.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Material.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Mesh.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Model.cpp" />
@@ -244,6 +246,8 @@
     <ClInclude Include="NewEngine\Object\2D\CircleGaugeSprite.h" />
     <ClInclude Include="NewEngine\Object\2D\RenderTexture.h" />
     <ClInclude Include="NewEngine\Object\2D\Sprite.h" />
+    <ClInclude Include="NewEngine\Object\Other\FbxLoader.h" />
+    <ClInclude Include="NewEngine\Object\Other\FbxModel.h" />
     <ClInclude Include="NewEngine\Object\Other\Texture.h" />
     <ClInclude Include="NewEngine\Object\3D\Camera.h" />
     <ClInclude Include="NewEngine\Object\3D\Line.h" />
