--- a/NewEngine.vcxproj
+++ b/NewEngine.vcxproj
@@ -82,14 +82,14 @@
     <IncludePath>$(SolutionDir)External/FBXSDK/include;$(SolutionDir)External/ImGUI;$(SolutionDir)External/DirectXTex</IncludePath>
     <IntDir>$(SolutionDir)../Generated/Obj/$(ProjectName)/$(Configuration)/</IntDir>
     <OutDir>$(SolutionDir)../Generated/Outputs/$(ProjectName)/$(Configuration)/</OutDir>
-    <LibraryPath>$(SolutionDir)../Generated/Outputs/FBXSDK/$(Configuration)/;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)/External/FBXSDK/lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(SolutionDir)External/FBXSDK/include;$(SolutionDir)External/ImGUI;$(SolutionDir)External/DirectXTex</IncludePath>
     <IntDir>$(SolutionDir)../Generated/Obj/$(ProjectName)/$(Configuration)/</IntDir>
     <OutDir>$(SolutionDir)../Generated/Outputs/$(ProjectName)/$(Configuration)/</OutDir>
-    <LibraryPath>$(SolutionDir)../Generated/Outputs/FBXSDK/$(Configuration)/;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)/External/FBXSDK/lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
