--- a/NewEngine.vcxproj.filters
+++ b/NewEngine.vcxproj.filters
@@ -499,7 +499,7 @@
     <None Include="NewEngine\Shader\RenderTexture.hlsli">
       <Filter>Shader</Filter>
     </None>
-    <None Include="NewEngine\Shader\Object3DH.hlsli">
+    <None Include="NewEngine\Shader\Object3D.hlsli">
       <Filter>Shader</Filter>
     </None>
     <None Include="NewEngine\Shader\Sprite.hlsli">
@@ -511,13 +511,13 @@
     <None Include="NewEngine\Shader\OutLine.hlsli">
       <Filter>Shader</Filter>
     </None>
-    <None Include="NewEngine\Shader\ToonRenderH.hlsli">
+    <None Include="NewEngine\Shader\ToonRender.hlsli">
       <Filter>Shader</Filter>
     </None>
-    <None Include="NewEngine\Shader\CircleGaugeSpriteH.hlsli">
+    <None Include="NewEngine\Shader\CircleGaugeSprite.hlsli">
       <Filter>Shader</Filter>
     </None>
-    <None Include="NewEngine\Shader\LineH.hlsli">
+    <None Include="NewEngine\Shader\Line.hlsli">
       <Filter>Shader</Filter>
     </None>
     <None Include="NewEngine\Shader\Blur.hlsli">
