--- a/imgui.ini
+++ b/imgui.ini
@@ -22,13 +22,13 @@ Collapsed=0
 DockId=0x0000000B,2
 
 [Window][SpotLight]
-Pos=1401,24
+Pos=1403,23
 Size=432,180
 Collapsed=0
 DockId=0x00000007,2
 
 [Window][Collision Debug]
-Pos=1410,449
+Pos=1417,455
 Size=419,438
 Collapsed=0
 DockId=0x0000000B,0
@@ -39,19 +39,19 @@ Size=550,680
 Collapsed=0
 
 [Window][Camera Option]
-Pos=189,429
+Pos=129,739
 Size=358,326
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][PointLight]
-Pos=1401,24
+Pos=1403,23
 Size=432,180
 Collapsed=0
 DockId=0x00000007,1
 
 [Window][DirectionalLight]
-Pos=1401,24
+Pos=1403,23
 Size=432,180
 Collapsed=0
 DockId=0x00000007,0
@@ -62,25 +62,25 @@ Size=514,263
 Collapsed=0
 
 [Window][Fog]
-Pos=1401,24
+Pos=1403,23
 Size=432,180
 Collapsed=0
 DockId=0x00000007,4
 
 [Window][Model]
-Pos=1401,206
+Pos=1403,205
 Size=432,178
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][CircleShadow]
-Pos=1401,24
+Pos=1403,23
 Size=432,180
 Collapsed=0
 DockId=0x00000007,3
 
 [Window][Main]
-Pos=189,348
+Pos=129,658
 Size=358,79
 Collapsed=0
 DockId=0x00000006,0
@@ -94,11 +94,11 @@ Collapsed=0
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=235,253 Selected=0x44A6A033
-DockNode    ID=0x00000004 Pos=189,348 Size=358,407 Split=Y
+DockNode    ID=0x00000004 Pos=129,658 Size=358,407 Split=Y
   DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=579,68 Selected=0x5B0000FE
   DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=579,281 Selected=0xD793C64C
-DockNode    ID=0x00000005 Pos=1401,24 Size=432,360 Split=Y Selected=0xC08551AB
-  DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=432,180 Selected=0xC08551AB
+DockNode    ID=0x00000005 Pos=1403,23 Size=432,360 Split=Y Selected=0xC08551AB
+  DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=432,180 Selected=0x7FDF5256
   DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=432,178 Selected=0x139FF6FE
-DockNode    ID=0x0000000B Pos=1410,449 Size=419,438 Selected=0x7FDF5256
+DockNode    ID=0x0000000B Pos=1417,455 Size=419,438 Selected=0x7FDF5256
 
