球のモデルを変えた

--- a/imgui.ini
+++ b/imgui.ini
@@ -98,7 +98,7 @@ DockNode    ID=0x00000004 Pos=129,658 Size=358,407 Split=Y
   DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=579,68 Selected=0x5B0000FE
   DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=579,281 Selected=0xD793C64C
 DockNode    ID=0x00000005 Pos=1403,23 Size=432,360 Split=Y Selected=0xC08551AB
-  DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=432,180 Selected=0xA7500E6A
+  DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=432,180 Selected=0xC08551AB
   DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=432,178 Selected=0x139FF6FE
 DockNode    ID=0x0000000B Pos=1417,455 Size=419,438 Selected=0x7FDF5256
 
