--- a/NewEngine.vcxproj.filters
+++ b/NewEngine.vcxproj.filters
@@ -307,7 +307,7 @@
       <Filter>NewEngine\Source\Object\Other</Filter>
     </ClCompile>
     <ClCompile Include="Application\SourceCode\Scene\LogoScene.cpp">
-      <Filter>Uncategorized\Source</Filter>
+      <Filter>Application\Source\Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -510,7 +510,7 @@
       <Filter>NewEngine\Header\Object\Other</Filter>
     </ClInclude>
     <ClInclude Include="Application\SourceCode\Scene\LogoScene.h">
-      <Filter>Uncategorized\Header</Filter>
+      <Filter>Application\Header\Scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
