--- a/NewEngine.vcxproj
+++ b/NewEngine.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="NewEngine\Object\2D\Sprite.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Camera.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Line.cpp" />
+    <ClCompile Include="NewEngine\Object\Other\Billboard.cpp" />
     <ClCompile Include="NewEngine\Object\Other\FbxLoader.cpp" />
     <ClCompile Include="NewEngine\Object\Other\FbxModel.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Material.cpp" />
@@ -192,6 +193,7 @@
     <ClInclude Include="NewEngine\Object\2D\CircleGaugeSprite.h" />
     <ClInclude Include="NewEngine\Object\2D\RenderTexture.h" />
     <ClInclude Include="NewEngine\Object\2D\Sprite.h" />
+    <ClInclude Include="NewEngine\Object\Other\Billboard.h" />
     <ClInclude Include="NewEngine\Object\Other\FbxLoader.h" />
     <ClInclude Include="NewEngine\Object\Other\FbxModel.h" />
     <ClInclude Include="NewEngine\Object\Other\TextureAnimeiton.h" />
